# plass

./: .travis.yml  CMakeLists.txt  Dockerfile  README.md  azure-pipelines.yml
data/: CMakeLists.txt  ExpOpt3_8_polished.cs32.lib  assemble.sh  assembledb.sh  assembler.sh  blosum90.out  easyassemble.sh  easyassembler.sh  guidedNuclAssemble.sh  hybridassembledb.sh  hybridassembler.sh  nuclassemble.sh  nuclassembledb.sh  nuclassembler.sh  nucleotide.out  predict_coding_acc9260_56x96.model  predict_coding_acc9540_57x32x64.model  predict_coding_acc9598_57x32x64.model  predict_coding_acc9623_57x32x64.model  predict_coding_acc9642_57x32x64.model  (+1 more)
src/: CMakeLists.txt  CommandDeclarations.h  LocalCommandDeclarations.h  mmseqs.cpp  penguin.cpp  plass.cpp
src/assembler/: CMakeLists.txt  assembleresult.cpp  checkcycle.cpp  correctreads.cpp  cyclecheck.cpp  filternoncoding.cpp  findassemblystart.cpp  guidedassembleresult.cpp  hybridassembleresult.cpp  mergereads.cpp  nuclassembleresult.cpp
src/clustering/: DistanceCalculator.h
src/commons/: FileUtil.cpp  FileUtil.h  LocalParameters.h  Orf.cpp  Parameters.cpp  Parameters.h  Sequence.cpp  Sequence.h
src/prefiltering/: Prefiltering.cpp  ReducedMatrix.cpp  ReducedMatrix.h
src/util/: CMakeLists.txt  assembleresult.cpp  createhdb.cpp  extractorfs.cpp  filternonecoding.cpp  findassemblystart.cpp  kmermatcher.cpp  rescorediagonal.cpp  translatenucs.cpp
src/workflow/: AssembleDB.cpp  Assembler.cpp  CMakeLists.txt  GuidedNuclassembler.cpp  HybridassembleDB.cpp  Hybridassembler.cpp  NuclassembleDB.cpp  Nuclassembler.cpp
(+14 files in other folders)
